--- a/main.html
+++ b/main.html
@@ -8,6 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="imageContainer">
+		<table>
+			<tr>
+				<td>
+					<img width="200" src="" alt="" >
+				</td>
+				<td>
+					<img width="600" src="" alt="" >
+				</td>
+				<td>
+					<img width="200" src="" alt="" >
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<img width="200" src="" alt="" >
+				</td>
+				<td>
+					<img width="600" src="" alt="" >
+				</td>
+				<td>
+					<img width="200" src="" alt="" >
+				</td>
+			</tr>
+		</table>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
