--- a/main.html
+++ b/main.html
@@ -12,24 +12,24 @@
 		<table>
 			<tr>
 				<td>
-					<img width="200" src="" alt="" >
+					<img width="200" src="https://www.imagetotext.info/web_assets/frontend/img/word_detection.webp" alt="" >
 				</td>
 				<td>
-					<img width="600" src="" alt="" >
+					<img width="600" src="https://www.imagetotext.info/web_assets/frontend/img/word_detection.webp" alt="" >
 				</td>
 				<td>
-					<img width="200" src="" alt="" >
+					<img width="200" src="https://www.imagetotext.info/web_assets/frontend/img/word_detection.webp" alt="" >
 				</td>
 			</tr>
 			<tr>
 				<td>
-					<img width="200" src="" alt="" >
+					<img width="200" src="https://www.imagetotext.info/web_assets/frontend/img/word_detection.webp" alt="" >
 				</td>
 				<td>
-					<img width="600" src="" alt="" >
+					<img width="600" src="https://www.imagetotext.info/web_assets/frontend/img/word_detection.webp" alt="" >
 				</td>
 				<td>
-					<img width="200" src="" alt="" >
+					<img width="200" src="https://www.imagetotext.info/web_assets/frontend/img/word_detection.webp" alt="" >
 				</td>
 			</tr>
 		</table>
